# zh-context-scanner

./: .env.local.example  .gitignore  LICENSE  LLM_CONFIG_GUIDE.md  LLM_CONFIG_GUIDE_zh.md  Project_Config.yaml  README.md  README_zh.md  RUNNING.md  RUNNING_zh.md  example.Project_Config.yaml  example.config.yaml  pyproject.toml  run.bat  run.ps1  run.sh
config/: example.Project_Config.yaml  terminology.yaml
src/: __init__.py  backup_manager.py  comment_patterns.py  comment_translator.py  config.py  config_generator.py  llm_client.py  main.py  models.py  paths.py  preference.py  scanner.py  translator.py  whole_file_translator.py
src/prompts/: __init__.py  templates.py  terminology_injector.py
src/solid_logger/: __init__.py  guard.py  logger.py  rotation.py
src/ui/: __init__.py  components.py  constants.py  i18n.py  keyboard.py  scan_progress_live.py  setup_wizard.py  tech_stack_presets.py  tui.py
